# nova-fora

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  docker-compose.dev.yml  nova4a-rebuild-plan.md  package-lock.json
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260424_1600_initial_schema.py  20260424_1930_vehicles_table.py  20260424_2000_inspections_defects.py  20260424_2130_photos_table.py  20260424_2230_inspection_status.py  20260427_2330_keys_received.py  20260427_2350_defect_catalog_v2.py  20260428_0010_work_orders.py  20260428_1200_dvic_template.py  20260428_1400_drop_severity.py  20260428_1500_defects_v2_table.py  20260505_1400_defect_schema_v22.py  20260505_2300_dvic_template_item.py  20260506_0000_dvic_photo_required.py  20260506_0100_inspection_rules.py  20260506_0200_ownership_and_branding.py  20260506_0300_defect_uq_wheel_position.py  20260506_0400_vehicle_fmc.py  20260506_0500_ownership_granular.py  20260507_0000_invitations.py  20260511_1900_wo_v2_rebuild.py  20260512_1600_invitation_vendor_workshop_fields.py  20260512_2000_vehicle_location.py  20260513_2200_wo_scheduled_repairs.py  20260515_1400_inspection_part_marks.py  (+24 more)
apps/api/app/: __init__.py  cli.py  db.py  defect_labels.py  defect_labels_es.py  i18n_errors.py  i18n_helpers.py  main.py  seed_defect_catalog.py  seed_dvic_template.py  seed_inspection_rules.py  seed_wo_v2.py  settings.py
apps/api/tests/: README.md  conftest.py  smoke_authz.py  test_authz_multi_tenant.py
(+199 files in other folders)
