[project]
name = "nova-api"
version = "0.1.0"
description = "Nova Fora backend API — fleet management platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "structlog>=24.4.0",
    "email-validator>=2.2.0",
    "boto3>=1.35.0",
    "jsonschema>=4.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["migrations", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008"]  # function call in default arg (FastAPI Depends pattern)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
